pass beer info to beer activity

--- a/app/src/main/res/layout/activity_beer.xml
+++ b/app/src/main/res/layout/activity_beer.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,8 +12,5 @@
         android:id="@+id/beer_textView"
         android:layout_gravity="center_horizontal" />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"></GridLayout>
+
 </LinearLayout>
